src/objects/Story__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StoryID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Temporary reference to external story backlog.</inlineHelpText>
        <label>Story ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StoryPointsAllocation__c</fullName>
        <inlineHelpText>The initial points estimate for this story.</inlineHelpText>
        <label>Story Points Allocation</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Story_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Story_Priority__c</fullName>
        <label>Story Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Status__c</fullName>
        <label>Story Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThemePriority__c</fullName>
        <label>Theme Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme</label>
        <referenceTo>Theme__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>StoryPointsAllocation__c</columns>
        <columns>Owner__c</columns>
        <columns>User_Story__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Story_Status__c</field>
            <operation>notEqual</operation>
            <value>In Progress,Complete,Awaiting Estimate</value>
        </filters>
        <label>Fall &apos;10 Candidate Stories</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Buzz_Stories</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Sprint__c</columns>
        <columns>Story_Status__c</columns>
        <columns>StoryPointsAllocation__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Buzz</value>
        </filters>
        <label>Buzz Stories</label>
    </listViews>
    <listViews>
        <fullName>Chatter</fullName>
        <columns>NAME</columns>
        <columns>User_Story__c</columns>
        <columns>StoryPointsAllocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme__c</field>
            <operation>equals</operation>
            <value>Chatter</value>
        </filters>
        <label>Chatter</label>
    </listViews>
    <listViews>
        <fullName>Dani_tmp</fullName>
        <columns>NAME</columns>
        <columns>Sprint__c</columns>
        <columns>Team__c</columns>
        <columns>StoryPointsAllocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Story__c.Product</value>
        </filters>
        <label>Stories rec.type=Product (editable list)</label>
    </listViews>
    <listViews>
        <fullName>Future</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Future</value>
        </filters>
        <label>Future</label>
    </listViews>
    <listViews>
        <fullName>Future_V7_Timeline</fullName>
        <columns>NAME</columns>
        <columns>Sprint__c</columns>
        <columns>Story_Status__c</columns>
        <columns>StoryPointsAllocation__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Future</value>
        </filters>
        <label>Future - V7 Timeline</label>
    </listViews>
    <listViews>
        <fullName>H1_Sprint_Review_current_sprint</fullName>
        <columns>Team__c</columns>
        <columns>StoryID__c</columns>
        <columns>NAME</columns>
        <columns>StoryPointsAllocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 71</value>
        </filters>
        <label>H1 Current Sprint</label>
    </listViews>
    <listViews>
        <fullName>H1_Sprint_Review_next_sprint</fullName>
        <columns>NAME</columns>
        <columns>StoryPointsAllocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 53</value>
        </filters>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>H1</value>
        </filters>
        <label>H1 Next Sprint</label>
    </listViews>
    <listViews>
        <fullName>IR2_Current_Sprint</fullName>
        <columns>StoryID__c</columns>
        <columns>Team__c</columns>
        <columns>NAME</columns>
        <columns>StoryPointsAllocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 74</value>
        </filters>
        <label>IR2 Current Sprint</label>
    </listViews>
    <listViews>
        <fullName>Media</fullName>
        <columns>NAME</columns>
        <columns>StoryID__c</columns>
        <columns>StoryPointsAllocation__c</columns>
        <columns>ThemePriority__c</columns>
        <columns>Story_Status__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme__c</field>
            <operation>equals</operation>
            <value>Media Solution</value>
        </filters>
        <filters>
            <field>Story_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>Media</label>
    </listViews>
    <listViews>
        <fullName>Media_GA_Priority_1</fullName>
        <columns>StoryID__c</columns>
        <columns>NAME</columns>
        <columns>ThemePriority__c</columns>
        <columns>Story_Status__c</columns>
        <columns>StoryPointsAllocation__c</columns>
        <columns>User_Story__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Story_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Theme__c</field>
            <operation>equals</operation>
            <value>Media Solution</value>
        </filters>
        <label>Media Open</label>
    </listViews>
    <listViews>
        <fullName>Media_Open</fullName>
        <columns>StoryID__c</columns>
        <columns>NAME</columns>
        <columns>User_Story__c</columns>
        <columns>Story_Status__c</columns>
        <columns>StoryPointsAllocation__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Story_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Theme__c</field>
            <operation>equals</operation>
            <value>Media Solution</value>
        </filters>
        <filters>
            <field>ThemePriority__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Media GA Priority 1</label>
    </listViews>
    <listViews>
        <fullName>New_UI</fullName>
        <columns>NAME</columns>
        <columns>StoryPointsAllocation__c</columns>
        <columns>Story_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>New UI</value>
        </filters>
        <label>New UI</label>
    </listViews>
    <listViews>
        <fullName>PSAMobileTimeEntry</fullName>
        <columns>NAME</columns>
        <columns>StoryID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Theme__c</field>
            <operation>equals</operation>
            <value>PSA Mobile - Timecard</value>
        </filters>
        <label>PSA Mobile - Time Entry</label>
    </listViews>
    <nameField>
        <label>Story  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <description>Stories relating to product functionality</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support</fullName>
        <active>true</active>
        <description>A story providing support such as to the business, to customers etc.</description>
        <label>Support</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>